# drf-auth

./: README.md  pyproject.toml  requirements.txt
Electro/: admin.py
Electro/migrations/: 0001_initial.py  0002_electro_owner.py
Electro_project/: README.md  asgi.py  settings.py  urls.py
Electro_project/Electro_project/: settings.py  urls.py  wsgi.py
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py
